Bug 757203 - crash in nsXULTreeAccessible::InvalidateCache when deleting cookie, r=surkov